# heterodyne

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  heterodyne_qa_report.md  pyproject.toml
.github/workflows_disabled/: ci.yml  docs.yml  quality.yml  release.yml
.serena/: project.yml
docs/: Algorithm Inventory.txt  Makefile  OPTIMIZATION_LEDGER.md  OPTIMIZATION_REPORT.md
docs/architecture/: cmc-fitting-architecture.md  data-handler-architecture.md  heterodyne-architecture-overview.md  nlsq-fitting-architecture.md  physical-model-architecture.md
docs/plans/: 2026-03-09-nlsq-fitting-implementation.md  2026-03-09-nlsq-fitting-redesign.md
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: cli.rst  cmc.rst  config.rst  core.rst  data.rst  device.rst  heterodyne_model.rst  index.rst  io.rst  jax_backend.rst  models.rst  nlsq.rst  optimization.rst  utils.rst  viz.rst
docs/source/architecture/: cmc-fitting-architecture.md  data-handler-architecture.md  heterodyne-architecture-overview.md  index.rst  nlsq-fitting-architecture.md  physical-model-architecture.md
docs/source/configuration/: index.rst  options.rst  templates.rst
docs/source/developer/: architecture.rst  contributing_guide.rst  index.rst  parameter_bounds_verification.rst  testing_guide.rst
docs/source/examples/: index.rst
docs/source/theory/: analysis_modes.rst  citations.rst  classical_processes.rst  computational_methods.rst  correlation_functions.rst  heterodyne_scattering.rst  index.rst  transport_coefficient.rst
docs/source/user_guide/: index.rst
docs/superpowers/plans/: 2026-03-20-shell-completion-fixes.md
heterodyne/: __init__.py  _version.py  post_install.py  uninstall_scripts.py
heterodyne/cli/: __init__.py  args_parser.py  commands.py  config_generator.py  config_handling.py  data_pipeline.py  main.py  optimization_runner.py  plot_dispatch.py  result_saving.py  xla_config.py
heterodyne/config/: __init__.py  manager.py  parameter_manager.py  parameter_names.py  parameter_registry.py  parameter_space.py  physics_validators.py  types.py
heterodyne/config/templates/: heterodyne_master_template.yaml
heterodyne/core/: __init__.py  backend_api.py  diagonal_correction.py  fitting.py  heterodyne_model.py  jax_backend.py  model_mixins.py  models.py  numpy_gradients.py  physics.py  physics_cmc.py  physics_factors.py  physics_nlsq.py  physics_utils.py  scaling_utils.py  theory.py
heterodyne/data/: __init__.py  angle_filtering.py  config.py  filtering_utils.py  memory_manager.py  optimization.py  performance_engine.py  phi_filtering.py  preprocessing.py  quality_controller.py  types.py  validation.py  validators.py  xpcs_loader.py
heterodyne/device/: __init__.py  config.py  cpu.py
heterodyne/io/: __init__.py  json_utils.py  mcmc_writers.py  nlsq_writers.py
heterodyne/optimization/: __init__.py  batch_statistics.py  checkpoint_manager.py  exceptions.py  gradient_diagnostics.py  numerical_validation.py  recovery_strategies.py
heterodyne/optimization/cmc/: __init__.py  config.py  core.py  data_prep.py  diagnostics.py  io.py  model.py  plotting.py  priors.py  reparameterization.py  results.py  sampler.py  scaling.py
heterodyne/optimization/nlsq/: __init__.py  adapter.py  adapter_base.py  adaptive_regularization.py  anti_degeneracy_controller.py  cmaes_wrapper.py  config.py  core.py  data_prep.py  fallback_chain.py  fit_computation.py  fourier_reparam.py  gradient_monitor.py  hierarchical.py  jacobian.py  memory.py  multistart.py  parallel_accumulator.py  parameter_index_mapper.py  parameter_utils.py  progress.py  recovery.py  result_builder.py  results.py  transforms.py  wrapper.py
heterodyne/runtime/: __init__.py
heterodyne/runtime/shell/: __init__.py  completion.sh
heterodyne/runtime/utils/: __init__.py  system_validator.py
heterodyne/utils/: __init__.py  async_io.py  logging.py  path_validation.py
heterodyne/viz/: __init__.py  datashader_backend.py  diagnostics.py  experimental_plots.py  mcmc_arviz.py  mcmc_comparison.py  mcmc_dashboard.py  mcmc_diagnostics.py  mcmc_plots.py  mcmc_report.py  nlsq_plots.py  validation.py
tests/: __init__.py  conftest.py  test_angle_filtering.py  test_cli_pipeline.py  test_cmc_core.py  test_cmc_data_prep.py  test_cmc_diagnostics_scientific.py  test_cmc_sampler.py  test_core.py  test_data_loader.py  test_diagonal_correction.py  test_heterodyne_model.py  test_jax_backend_scientific.py  test_logging.py  test_model_modes.py  test_multistart.py  test_nlsq_adapter_coverage.py  test_nlsq_core_coverage.py  test_nlsq_input_validator.py  test_nlsq_wrapper.py  test_parameter_manager_coverage.py  test_parameter_names.py  test_parameter_recovery.py  test_parameter_registry_coverage.py  test_parameter_space_coverage.py  test_physics_validators.py  test_property_based.py  test_scaling.py  test_theory_scientific.py  test_viz_params.py
tests/api/: test_compatibility.py
tests/documentation/: test_docs_content.py
tests/factories/: __init__.py  config_factory.py  conftest.py  data_factory.py  test_cmc_fixtures.py
tests/integration/: __init__.py  test_cli_pipeline.py  test_cmc_pipeline.py  test_cmc_reparameterization.py  test_error_recovery.py  test_full_pipeline.py  test_hdf5_pipeline.py  test_integration.py  test_nlsq_cmc_consistency.py  test_nlsq_pipeline.py
tests/mcmc/: test_statistical_validation.py
tests/performance/: test_jit_compilation.py  test_memory_scaling.py
tests/regression/: __init__.py  test_nlsq_regression.py  test_numerical_stability.py  test_parameter_sensitivity.py
tests/scientific/: test_numerical_validation.py  test_property_based.py
tests/unit/cli/: test_args_parser.py  test_commands.py  test_completion_parity.py  test_optimization_runner.py
tests/unit/config/: test_config_manager.py  test_parameter_manager_coverage.py  test_parameter_names.py  test_parameter_recovery.py  test_parameter_registry_coverage.py  (+2 more)
tests/validation/: test_scientific_validation.py
(+126 files in other folders)
