[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0", "setuptools_scm[toml]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "heterodyne"
dynamic = ["version"]
description = "CPU-optimized JAX-based heterodyne scattering analysis for XPCS under nonequilibrium conditions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
    {name = "Hongrui He", email = "hhe@anl.gov"},
]
maintainers = [
    {name = "Wei Chen", email = "weichen@anl.gov"},
]
keywords = [
    "xpcs",
    "scattering",
    "dynamics",
    "jax",
    "optimization",
    "bayesian",
    "physics",
    "materials-science",
    "heterodyne"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"

# ============================================================================
# CPU-ONLY ARCHITECTURE
# ============================================================================
# Heterodyne is CPU-only, optimized for multi-core systems and HPC clusters.
# Works on ALL platforms: Linux, macOS, Windows
#
# Platform support:
#   ✅ Linux: Full support (HPC clusters with 36/128-core nodes)
#   ✅ macOS: Full support (Apple Silicon/Intel)
#   ✅ Windows: Full support
#
# Requirements:
#   - Python 3.12+ (tested with 3.12.x and 3.13.x)
#   - JAX 0.8.2+ (CPU-only)
#   - Multi-core CPU recommended (14+ cores for best performance)
# ============================================================================
dependencies = [
    # Core scientific computing
    "numpy>=2.3",
    "scipy>=1.17",
    # JAX ecosystem (CPU-only)
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "jaxopt>=0.8.3",
    "interpax>=0.3.12",
    "nlsq>=0.6.10",
    "evosax>=0.2.0",
    # Bayesian inference
    "numpyro>=0.19.0",
    "blackjax>=1.3",
    "arviz>=0.23",
    # Data handling
    "h5py>=3.15,<4.0",
    "pyyaml>=6.0.3",
    # System utilities
    "psutil>=7.2",
    "cloudpickle>=3.1",
    "tqdm>=4.67.1",
    # Plotting
    "matplotlib>=3.10",
    # Fast visualization (includes numba as transitive dependency)
    "datashader>=0.18",
    "xarray>=2025.12",
    # Machine learning utilities (for GMM bimodal detection)
    "scikit-learn>=1.6",
    # Development tools
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pytest-xdist>=3.8",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    # Documentation
    "sphinx>=9.1.0",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx-autodoc-typehints>=3.6.3",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/imewei/heterodyne"
Documentation = "https://heterodyne.readthedocs.io"
Repository = "https://github.com/imewei/heterodyne.git"
Issues = "https://github.com/imewei/heterodyne/issues"
Changelog = "https://github.com/imewei/heterodyne/blob/main/CHANGELOG.md"

[project.scripts]
heterodyne = "heterodyne.cli.main:main"
heterodyne-config = "heterodyne.cli.config_generator:main"
heterodyne-config-xla = "heterodyne.cli.xla_config:main"
heterodyne-post-install = "heterodyne.post_install:main"
heterodyne-cleanup = "heterodyne.uninstall_scripts:main"
heterodyne-validate = "heterodyne.runtime.utils.system_validator:main"

[tool.setuptools_scm]
write_to = "heterodyne/_version.py"
write_to_template = """
# Auto-generated by setuptools_scm - DO NOT EDIT
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

# Version scheme: "guess-next-dev" automatically bumps the PATCH version (last digit)
# Examples: v0.1.0 → 0.1.0, then commits → 0.1.1.dev1, 0.1.1.dev2, ...
version_scheme = "guess-next-dev"

# Local scheme: "no-local-version" for clean versions in CI/CD (PEP 440 compliant)
# Use "dirty-tag" during development to see "+dirty" for uncommitted changes
local_scheme = "no-local-version"

# Fallback version when git is unavailable (e.g., installing from tarball)
fallback_version = "2.0.0"

# Only match semantic version tags (v1.2.3 or 1.2.3 format)
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

# Parent directory prefix for version detection from directory name
parentdir_prefix_version = "heterodyne-"

[tool.setuptools.packages.find]
where = ["."]
include = ["heterodyne*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
heterodyne = [
    "config/templates/*.yaml",
    "config/templates/*.yml",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["heterodyne/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs/notebooks/*.ipynb" = ["E402", "B905"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B110", "B403", "B404", "B603"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "nlsq.*",
    "evosax.*",
    "numpyro.*",
    "blackjax.*",
    "arviz.*",
    "h5py.*",
    "psutil.*",
    "matplotlib.*",
    "datashader.*",
    "xarray.*",
    "scipy.*",
    "zstd.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "docs.*"]
follow_imports = "skip"
ignore_errors = true

# Large modules with complex type inference - relax some checks
[[tool.mypy.overrides]]
module = [
    "heterodyne.optimization.nlsq.core",
    "heterodyne.optimization.nlsq.progress",
    "heterodyne.optimization.nlsq.strategies.residual",
    "heterodyne.optimization.nlsq.strategies.sequential",
    "heterodyne.optimization.nlsq.strategies.chunked",
    "heterodyne.optimization.nlsq.strategies.executors",
    "heterodyne.optimization.nlsq.fourier_reparam",
    "heterodyne.optimization.nlsq.fit_computation",
    "heterodyne.optimization.nlsq.multistart",
    "heterodyne.optimization.nlsq.jacobian",
    "heterodyne.optimization.nlsq.hierarchical",
    "heterodyne.optimization.nlsq.parameter_index_mapper",
    "heterodyne.optimization.nlsq.parameter_utils",
    "heterodyne.optimization.nlsq.results",
    "heterodyne.optimization.nlsq.memory",
    "heterodyne.optimization.nlsq.adapter",
    "heterodyne.optimization.nlsq.cmaes_wrapper",
    "heterodyne.optimization.cmc.sampler",
    "heterodyne.optimization.cmc.backends.multiprocessing_backend",
    "heterodyne.optimization.cmc.backends.pjit_backend",
    "heterodyne.optimization.cmc.backends.base",
    "heterodyne.optimization.cmc.core",
    "heterodyne.optimization.cmc.io",
    "heterodyne.optimization.cmc.plotting",
    "heterodyne.optimization.cmc.results",
    "heterodyne.optimization.cmc.model",
    "heterodyne.optimization.numerical_validation",
    "heterodyne.data",
    "heterodyne.data.filtering_utils",
    "heterodyne.data.validation",
    "heterodyne.data.phi_filtering",
    "heterodyne.data.xpcs_loader",
    "heterodyne.viz.nlsq_plots",
    "heterodyne.viz.mcmc_plots",
    "heterodyne.viz.datashader_backend",
    "heterodyne.viz.experimental_plots",
    "heterodyne.config.parameter_manager",
    "heterodyne.config.parameter_space",
    "heterodyne.cli.xla_config",
    "heterodyne.device.*",
    "heterodyne.runtime.*",
    "heterodyne.post_install",
    "heterodyne.uninstall_scripts",
]
ignore_errors = true

[tool.pytest.ini_options]
# Pytest configuration for Heterodyne test suite (CPU-only)
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short --maxfail=10 --durations=10"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "linux: marks tests as requiring Linux OS",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "mcmc: marks tests as MCMC statistical tests",
    "requires_jax: marks tests as requiring JAX",
    "api: marks tests as API compatibility tests",
    "self_consistency: marks tests as CMC self-consistency tests",
    "validation: marks tests as CMC accuracy validation tests",
    "arviz: marks tests as ArviZ integration tests",
    "visualization: marks tests as visualization tests",
    "regression: marks tests as regression tests",
]
filterwarnings = [
    # JAX warnings
    "ignore::DeprecationWarning:jax.*",
    "ignore::FutureWarning:jax.*",
    "ignore::UserWarning:jax.*",
    # NumPyro warnings
    "ignore::UserWarning:numpyro.*",
    "ignore::DeprecationWarning:numpyro.*",
    # General warnings
    "ignore::PendingDeprecationWarning",
    "ignore::matplotlib.MatplotlibDeprecationWarning",
    # Specific warnings
    "ignore:There are not enough devices to run parallel chains:UserWarning",
    "ignore:Covariance of the parameters could not be estimated:scipy.optimize.OptimizeWarning",
    "ignore:scatter inputs have incompatible types.*:FutureWarning",
    "ignore:invalid escape sequence:SyntaxWarning",
    # NumPyro uses deprecated JAX internals (xla_pmap_p) - awaiting upstream fix
    "ignore:jax.interpreters.pxla.xla_pmap_p is deprecated:DeprecationWarning",
    # Multiprocessing fork warnings (Python 3.13 + JAX multithreaded)
    "ignore:os.fork\\(\\) was called.*:RuntimeWarning",
    "ignore:This process.*is multi-threaded, use of fork\\(\\).*:DeprecationWarning",
    # NLSQ wrapper dt derivation warning (expected with synthetic test data)
    "ignore:data\\.dt missing.*:UserWarning",
]
# Logging
log_cli = false
log_cli_level = "WARNING"
# Performance
junit_family = "xunit2"
cache_dir = ".pytest_cache"

[tool.coverage.run]
source = ["heterodyne"]
omit = [
    "heterodyne/_version.py",
    "heterodyne/post_install.py",
    "heterodyne/uninstall_scripts.py",
    "heterodyne/cli/*",
    "heterodyne/viz/*",
    "heterodyne/runtime/*",
    "heterodyne/data/*",
    "heterodyne/device/*",
    "heterodyne/io/*",
    "heterodyne/core/fitting.py",
    "heterodyne/core/models.py",
    "heterodyne/core/numpy_gradients.py",
    "heterodyne/core/jax_backend.py",
    "heterodyne/core/physics.py",
    "heterodyne/core/physics_cmc.py",
    "heterodyne/core/physics_factors.py",
    "heterodyne/core/physics_nlsq.py",
    "heterodyne/core/theory.py",
    "heterodyne/optimization/cmc/*",
    "heterodyne/optimization/gradient_diagnostics.py",
    "heterodyne/optimization/batch_statistics.py",
    "heterodyne/optimization/numerical_validation.py",
    "heterodyne/optimization/nlsq/jacobian.py",
    "heterodyne/optimization/nlsq/transforms.py",
    "heterodyne/optimization/nlsq/strategies/residual_jit.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.heterodyne]
hpc = true
preferred_device = "cpu"

[tool.heterodyne.defaults]
analysis_mode = "static_isotropic"
optimization_method = "nlsq"
output_format = "yaml"

[tool.heterodyne.performance]
cpu_threads = "auto"
enable_jit = true
cache_compilation = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "ipykernel>=7.2.0",
]

[tool.uv]
# Override uvloop to be Unix-only (orbax-checkpoint declares it unconditionally,
# but uvloop does not support Windows)
override-dependencies = [
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

# [tool.uv.sources]
# Uncomment to use local NLSQ for development:
# nlsq = { path = "../NLSQ", editable = true }
